--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "entity": "0.0.0",
     "middlewarify": "~0.3.4",
     "crude": "~0.2.3",
-    "bluebird": "~1.0.5"
+    "bluebird": "~1.0.5",
+    "lodash": "~2.4.1"
   }
 }
