--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "kansas",
   "version": "0.0.0",
-  "main": "lib/kansas.js",
+  "main": "./",
   "description": "Rate limited API to go",
   "homepage": "https://github.com/thanpolas/kansas",
   "bugs": "https://github.com/thanpolas/kansas/issues",
