add required packages

--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "crude": "~0.3.2",
     "bluebird": "~1.0.5",
     "lodash": "~2.4.1",
-    "node-entity": "~0.2.3"
+    "node-entity": "~0.2.3",
+    "slug": "~0.4.2",
+    "validator": "~3.3.0"
   },
   "devDependencies": {
     "grunt-contrib-watch": "~0.5.3",
