--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "lodash": "~2.4.1",
     "node-entity": "~0.2.3",
     "slug": "~0.4.2",
-    "validator": "~3.3.0"
+    "validator": "~3.3.0",
+    "floordate": "~1.0.2"
   },
   "devDependencies": {
     "grunt-contrib-watch": "~0.5.3",
