--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     }
   ],
   "scripts": {
-    "test": "./node_modules/.bin/mocha -b test/manage -u bdd  -R spec"
+    "test": "./node_modules/.bin/mocha -b test/unit -u tdd  -R spec"
   },
   "dependencies": {
     "logg": "~0.2.2",
