update and lock all packages to latest

--- a/package.json
+++ b/package.json
@@ -23,32 +23,32 @@
     "test": "./node_modules/.bin/grunt"
   },
   "dependencies": {
-    "logg": "~0.3.0",
-    "cip": "~0.2.5",
-    "middlewarify": "~0.4.0",
-    "bluebird": "~2.3.5",
-    "lodash": "~2.4.1",
-    "floordate": "~2.0.0",
-    "redis": "~0.12.1",
-    "redis-scanstreams": "~1.0.1",
-    "terminus": "~1.0.10",
-    "collections": "~1.2.1",
-    "grunt-contrib-jshint": "^0.10.0"
+    "logg": "0.3.1",
+    "cip": "1.0.0",
+    "middlewarify": "1.0.0",
+    "bluebird": "3.2.1",
+    "lodash": "4.2.1",
+    "floordate": "2.0.0",
+    "redis": "2.4.2",
+    "redis-scanstreams": "1.0.3",
+    "terminus": "1.1.0",
+    "collections": "3.0.0",
+    "grunt-contrib-jshint": "0.12.0"
   },
   "devDependencies": {
-    "grunt-contrib-watch": "~0.6.1",
-    "load-grunt-tasks": "~0.6.0",
-    "mocha": "~1.21.5",
-    "grunt-mocha-test": "~0.12.1",
-    "grunt-cli": "~0.1.13",
-    "grunt-express-server": "~0.4.19",
-    "grunt-parallel": "~0.3.1",
-    "grunt-open": "~0.2.3",
-    "grunt": "~0.4.5",
-    "chai": "~1.9.2",
-    "sinon": "~1.10.3",
-    "grunt-services": "0.0.2",
-    "grunt-release": "~0.7.0",
-    "jshint-stylish": "^1.0.0"
+    "grunt-contrib-watch": "0.6.1",
+    "load-grunt-tasks": "3.4.0",
+    "mocha": "2.4.5",
+    "grunt-mocha-test": "0.12.7",
+    "grunt-cli": "0.1.13",
+    "grunt-express-server": "0.5.1",
+    "grunt-parallel": "0.4.1",
+    "grunt-open": "0.2.3",
+    "grunt": "0.4.5",
+    "chai": "3.5.0",
+    "sinon": "1.17.3",
+    "grunt-services": "0.1.0",
+    "grunt-release": "0.13.0",
+    "jshint-stylish": "2.1.0"
   }
 }
